test-cases/negative/test_073_for_without_each.lay
# negative test: for loop without 'each' keyword
# expected: parser should reject this

for item in list do
  print item
end for


